# netmon-proc

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml  dockerhub.yml  pypi.yml
netmon_proc/: __main__.py  main.py  netinfo.py  sniffer.py  socket.py  socketwatcher.py  utils.py
netmon_proc/cli/: __init__.py  logger.py  opts.py  utils.py
netmon_proc/formatter/: __init__.py  format.py  jsonmetricsformatter.py  metricsformatter.py  metricsformatterfactory.py  tablemetricsformatter.py  utils.py
netmon_proc/metrics/: __init__.py  compositemetric.py  leafmetric.py  metric.py  metricsfactory.py  metrictype.py  rxbytesmetric.py  rxpacketsmetric.py  txbytesmetric.py  txpacketsmetric.py
netmon_proc/patterns/: singleton.py
netmon_proc/socketwatcher/: __init__.py  fetchingexception.py  fetchingstrategy.py  psutilfetchingstrategy.py  socket.py  socketwatcher.py
